Fix Z-index issue on mobile menu when scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body header {
   background-size: cover;
   background-position-x: center;
   padding: 0 12px;
-  z-index: 1;
+  z-index: 2;
 }
 body header li {
   list-style-type: none;
@@ -81,7 +81,6 @@ body nav .mobile-menu {
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 2;
 }
 body nav .mobile-menu #nav-close {
   font-size: 2em;
