--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -16,7 +16,7 @@ body {
     background-size: cover;
     background-position-x: center;
     padding: 0 $padding-content-x;
-    z-index: 1;
+    z-index: 2;
     li {
       list-style-type: none;
     }
@@ -64,7 +64,6 @@ body {
       bottom: 0;
       left: 0;
       background-color: rgba(0, 0, 0, 0.7);
-      z-index: 2;
 
       #nav-close {
         font-size: 2em;
